Made health router and updated README a bit
One more commit in main - stop this man already
